--- a/main.css
+++ b/main.css
@@ -1,18 +1,29 @@
-h1 {
-    color: red;
+@import url(https://fonts.googleapis.com/css?family=Work+Sans); 
+    
+body {
+    font-family: "Work Sans";
 }
 
 .navigation {
     list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-li {
-    display: inline;
-    padding: inherit;
 }
 
 #home {
-    color: blueviolet;
+    float: left;
+    text-align: left;
+}
+
+.navigation li {
+    display: inline;
+    padding: 14px 16px;
+    font-size: 17px;
+    float: right;
+}
+
+h2 {
+    color: red;
+    clear: both;
+    padding: 14px;
+    display: block;
+    text-align: left;
 }
