--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans); 
-    
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);     
+
 body {
     font-family: "Work Sans";
     margin: 0px;
     padding: 0px;
-    background-color: darkkhaki;
+    background-color:cornflowerblue
 }
 
 ul {
@@ -59,7 +60,7 @@ h2 {
 }
 
 #terminal-title {
-    font-family: "Work Sans";
+    font-family: "Work Sans", sans-serif;
     font-size: 20px;
     font-weight: bold;
     color: black;
@@ -68,11 +69,28 @@ h2 {
     padding-left: 10px;
 }
 
-.command {
-    font-family: monospace;
+.user {
+    font-family: "Source Code Pro", monospace;
     font-size: 20px;
     padding-top: 5px;
     padding-left: 10px;
     padding-bottom: 5px;
     color: red;
+    display: inline;
+}
+
+.command {
+    font-family: "Source Code Pro", monospace;
+    font-size: 20px;
+    padding: 5px;
+    color: white;
+}
+
+.terminal-text {
+    font-family: "Source Code Pro", monospace;
+    font-size: 20px;
+    padding-top: 2px;
+    padding-left: 10px;
+    padding-bottom: 2px;
+    color: white;
 }
