--- a/main.css
+++ b/main.css
@@ -5,92 +5,29 @@ body {
     font-family: "Work Sans";
     margin: 0px;
     padding: 0px;
-    background-color:cornflowerblue
+    background-color: floralwhite;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    background-color: black;
-    overflow: auto;
-}
-
-#home {
-    float: left;
-}
-
-#home a {
-    font-size: 25px;
-}
-
-.navigation li {
+#name a {
     display: inline;
-    padding: 14px 16px;
-    float: right;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-li a {
-    color: white;
+    font-size: 35px;
     text-decoration: none;
-    font-size: 20px;
-}
-
-h2 {
-    padding: 14px;
-    display: block;
-    text-align: left;
-}
-
-#terminal {
-    width: 700px;
-    height: 700px;
+    line-height: 200px;
+    margin-top: -50px;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    margin-bottom: inherit;
+    color: white;
     background-color: black;
-    border-radius: 11px;
-    margin: 0px auto;
+    clear: both;
 }
 
-#window-bar {
-    width: 700px;
-    height: 50px; 
-    background-color: white;
-    border-radius: 10px 10px 0px 0px;
-    display: table;
-}
-
-#terminal-title {
-    font-family: "Work Sans", sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-    display: table-cell;
-    vertical-align: middle;
-    padding-left: 10px;
-}
-
-.user {
-    font-family: "Source Code Pro", monospace;
-    font-size: 20px;
-    padding-top: 5px;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    color: red;
-    display: inline;
-}
-
-.command {
-    font-family: "Source Code Pro", monospace;
-    font-size: 20px;
-    padding: 5px;
+#navigation {
+    clear: both;
+    font-size: 40px;
+    float: right;
+    padding: 15px;
     color: white;
 }
 
-.terminal-text {
-    font-family: "Source Code Pro", monospace;
-    font-size: 20px;
-    padding-top: 2px;
-    padding-left: 10px;
-    padding-bottom: 2px;
-    color: white;
-}
