--- a/main.css
+++ b/main.css
@@ -17,49 +17,58 @@ body {
     margin-bottom: inherit;
     padding-bottom: -10px;
     background-color: black;
-    z-index: -1;
+    z-index: -2;
 }
 
 #name a {
     font-size: 40px;
     text-decoration: none;
     color: white;
+    user-select: none;
 }
 
-#navigation-button {
-    
-    z-index: 11;
+#nav-button {
     font-size: 40px;
     float: right;
     margin-right: 65px;
     margin-top: 10px;
+    height: 69px;
     padding: 15px;
     color: white;
     clear: both;
+    user-select: none;
+    cursor: pointer;
 }
 
-#navigation-options {
+#nav-options {
     margin: 0px;
-    padding: 5px;
     position: absolute;
-    top: 100px;
+    top: 108px;
     right: 0px;
     height: 175px;
     width: 200px;
     color: black;
     list-style: none;
     text-decoration: none;
-    background-color: black;
+    display: none;
     opacity: 0.4;
 }
 
-li {
- margin: 10px;
- text-align: center;
+#nav-options li {
+    padding: 15px 10px;
+    text-align: center;
+    background-color: black;
 }
 
-a {
-color: white;
-font-size: 25px;
-margin: 10px;
+nav a {
+    color: white;
+    font-size: 25px;
+    user-select: none;
+    cursor: pointer;
+    margin: 10px;
+}
+
+nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
+    display: block;
+    opacity: 0.7;
 }
