--- a/main.css
+++ b/main.css
@@ -1,22 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans); 
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);     
+@import url(https://fonts.googleapis.com/css?family=Lora);     
 
 body {
     font-family: "Work Sans";
     margin: 0px;
     padding: 0px;
-    background-color: floralwhite;
 }
 
 #name {
     display: inline;
+    top: 0px;
     line-height: 100px;
     position: absolute;
     text-align: center;
     width: 100%;
     margin-bottom: inherit;
     padding-bottom: -10px;
-    background-color: black;
+    background-color: #1b1b1b;
     z-index: -2;
 }
 
@@ -29,7 +29,8 @@ body {
 
 #nav-button {
     font-size: 40px;
-    float: right;
+    position: absolute;
+    right: 5px;
     margin-right: 65px;
     margin-top: 10px;
     height: 69px;
@@ -45,9 +46,9 @@ body {
     position: absolute;
     top: 108px;
     right: 0px;
-    height: 175px;
+    height: 200px;
     width: 200px;
-    color: black;
+    color: #1b1b1b;
     list-style: none;
     text-decoration: none;
     display: none;
@@ -57,7 +58,7 @@ body {
 #nav-options li {
     padding: 15px 10px;
     text-align: center;
-    background-color: black;
+    background-color: #1b1b1b;
 }
 
 nav a {
@@ -71,4 +72,61 @@ nav a {
 nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     display: block;
     opacity: 0.7;
+    z-index: 100;
 }
+
+#floral {
+    position: relative;
+    top: 108px;
+    height: 600px;
+    background-color: floralwhite;
+}
+
+#black {
+    position: relative;
+    top: 108px;
+    height: 500px;
+    background-color: #1b1b1b;
+}
+
+.text-box {
+    position: absolute;
+    right: 130px;
+    top: 60px;
+    font-size: 28px;
+    width: 500px;
+    text-align: center;
+    font-family: "Lora";
+}
+
+#example, #synonyms {
+    text-indent: 35px;
+    opacity: 0.7;
+}
+
+#intro, #term {
+    font-family: "Work Sans";
+    font-size: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
