--- a/main.css
+++ b/main.css
@@ -1,8 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans); 
-@import url(https://fonts.googleapis.com/css?family=Lora);     
+@import url(https://fonts.googleapis.com/css?family=Lora);  
+@import url(https://fonts.googleapis.com/css?family=Lato);
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 body {
     font-family: "Work Sans";
+    max-width: 100%;
     margin: 0px;
     padding: 0px;
 }
@@ -68,12 +75,14 @@ nav a {
     user-select: none;
     cursor: pointer;
     margin: 10px;
+    padding-right: 0px;
 }
 
 nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     display: block;
     opacity: 0.7;
     z-index: 100;
+    padding-right: 0px;
 }
 
 #mainContent {
@@ -83,10 +92,10 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     background-color: rgb(66, 168, 192);
 }
 
-#blackFooter {
+#project-section {
     position: relative;
     top: 108px;
-    height: 1000px;
+    height: 1300px;
     background-color: #1b1b1b;
 }
 
@@ -128,9 +137,17 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     left: 30px;
 }
 
+#project3 {
+    position: relative;
+    height: 260px;
+    width: 350px;
+    left: 30px;
+}
+
 #BrainApp p {
     color: white !important;
     top: 145px;
+    left: 600px;
     text-align: left;
     font-family: "Work Sans";
 }
@@ -143,6 +160,15 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     
 }
 
+#AutoQuiz p {
+    color: white !important;
+    top: 995px;
+    left: 400px;
+    width: 700px;
+    text-align: left;
+    font-family: "Work Sans";
+}
+
 h1, h2 {
     color: white;
     margin: 0;
@@ -153,14 +179,56 @@ h1, h2 {
 }
 
 h1 {
-    top: 25px;
+    text-align: center;
+    margin: auto;
+    position: relative;
+    left: 0px;
     font-size: 40px;
-    left: 430px;
 }
 
+#experience-section {
+    background-image: url(CaseWestern.jpg);
+    height: 955px;
+    margin-top: 108px;
+}
 
+#timeline {
+    position: relative;
+    top: 55px;
+    margin: auto;
+    width: 1000px;
+}
 
+.experience-descript {
+    background-color: rgba(27, 27, 27, 0.9);
+    text-align: center;
+    position: relative;
+    width: 500px;
+}
 
+.position {
+    color: white;
+    text-align: center;
+}
+
+.organization {
+    color: rgb(66, 168, 192);
+    text-align: center;
+}
+
+.experience-descript p {
+    color: white;
+    font-size: 19px;
+    font-family: "Lato";
+}
+
+#Ignatius {
+    margin-left: 600px; 
+}
+
+#CaseWesternStudent {
+    margin-left: 600px;
+}
 
 
 
