--- a/main.css
+++ b/main.css
@@ -169,6 +169,11 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     font-family: "Work Sans";
 }
 
+h3 {
+    padding: 1px;
+    margin: 1px;
+}
+
 h1, h2 {
     color: white;
     margin: 0;
@@ -188,13 +193,13 @@ h1 {
 
 #experience-section {
     background-image: url(CaseWestern.jpg);
-    height: 955px;
+    height: 950px;
     margin-top: 108px;
 }
 
 #timeline {
     position: relative;
-    top: 55px;
+    top: 95px;
     margin: auto;
     width: 1000px;
 }
@@ -204,6 +209,9 @@ h1 {
     text-align: center;
     position: relative;
     width: 500px;
+    padding: 0px;
+    margin: 0px;
+    margin-top: -20px;
 }
 
 .position {
@@ -216,26 +224,34 @@ h1 {
     text-align: center;
 }
 
+.year {
+    color: white;
+    text-decoration: bold;
+}
+
 .experience-descript p {
     color: white;
     font-size: 19px;
     font-family: "Lato";
+    padding: 3px;
+    padding-top: 0px;
 }
 
-#Ignatius {
+#Ignatius, #CaseWesternStudent {
     margin-left: 600px; 
 }
 
-#CaseWesternStudent {
-    margin-left: 600px;
+#contact {
+    height: 500px;
+    background-color: rgb(66, 168, 192);
 }
 
-
-
-
-
-
-
+.icon {
+    margin: 5px 55px;
+    padding: 15px;
+    height: 300px;
+    width: 300px;
+}
 
 
 
