Fixed problems with different browsers

--- a/main.css
+++ b/main.css
@@ -195,7 +195,7 @@ h2 {
 }
 
 #experience-section {
-    background-image: url(CaseWestern.jpg);
+    background-image: url(assets/CaseWestern.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
     height: 950px;
