--- a/main.css
+++ b/main.css
@@ -14,12 +14,12 @@ body {
     padding: 0px;
 }
 
-#nav-bar {
+.navbar {
     background-color: #1b1b1b;
 }
 
 #name {
-    display: inline;
+    margin-left: 8%;
     font-size: 40px;
     text-decoration: none;
     color: white;
@@ -68,24 +68,33 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     padding-right: 0px;
 }
 
-#mainContent { 
-    background-color: rgb(66, 168, 192);
-}
-
-#main-pic {
-    width: 1210px; 
-    height:1614px;
-}
-
 #project-section {
     background-color: #1b1b1b;
 }
 
+#mainContent { 
+    background-color: rgb(66, 168, 192);
+}
+
 .text-box {
+    display: block;
+    line-height: 125%;
     font-size: 28px;
-    width: 80%;
-    text-align: center;
     font-family: "Lora";
+    text-align: justify;
+}
+
+#main-pic {
+    margin-left: 15%;
+}
+
+#mainContent .text-box {
+    position: relative;
+    display: inline-block;
+    width: 80%;
+    margin-top: 5%;
+    right: 13%;
+    text-align: center;
 }
 
 #example, #synonyms {
@@ -98,6 +107,20 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
     font-size: 30px;
 }
 
+.project-image img {
+    display: block;
+    margin: 0 auto;
+}
+.project-text {
+    display: block;
+    text-align: justify;
+}
+
+.project-text p {
+    padding-top: 10%;
+    padding-right: 15%;
+    text-align: center;
+}
 #project1 {
     height: 380px;
     width: 550px;
@@ -110,7 +133,7 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
 
 #BrainApp p {
     color: white !important;
-    text-align: left;
+    text-align: center;
     font-family: "Work Sans";
 }
 
@@ -120,9 +143,10 @@ nav div:hover + #nav-options, #nav-options:hover, #nav-options li:hover{
 }
 
 #AutoQuiz p {
+    padding-top: 7%;
     color: white !important;
-    width: 700px;
-    text-align: left;
+    width: 95%;
+    text-align: center;
     font-family: "Work Sans";
 }
 
@@ -147,25 +171,23 @@ h1 {
 
 h2 {
     text-decoration: bold;
+    text-align: center;
 }
 
 #experience-section {
     background-image: url(assets/CaseWestern.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-    margin-top: 108px;
-}
-
-#timeline {
-    margin: auto;
-    width: 1000px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .experience-descript {
     background-color: rgba(27, 27, 27, 0.9);
-    width: 500px;
-    padding: 0px;
-    margin: 0px;
+    width: 100%;
+    padding: 3px;
+    margin: 5% auto;
+    width: 70%;
 }
 
 .position {
@@ -179,6 +201,7 @@ h2 {
 }
 
 .year {
+    text-align: center;
     color: white;
     text-decoration: bold;
 }
@@ -191,24 +214,25 @@ h2 {
     padding-top: 0px;
 }
 
-#Ignatius, #CaseWesternStudent {
-    margin-left: 600px; 
-}
-
 #contact-section {
-    height: 500px;
+    margin: 0;
     background-color: rgb(66, 168, 192);
 }
 
 .icon {
-    margin: 5px 55px;
-    padding: 15px;
     height: 300px;
     width: 300px;
+    margin: 10px;
 }
 
 #icon-row {
 	text-align: center;
+}
+
+.container, .container-fluid {
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 
