--- a/main.css
+++ b/main.css
@@ -36,12 +36,12 @@ body {
     color: none;
     text-align: inherit;
     list-style: none;
-    height: 0px;
-    width: 0px;
-    background-color: rgba(0,0,0,1);
+    background-color: rgb(66, 168, 192) ;
     background-clip: inherit;
     border: none;
     border-radius: initial;
+    opacity: 0;
+    right: 30px;
 }
 
 #nav-button {
@@ -53,9 +53,8 @@ body {
 
 #nav-options {
     margin: 0px;
-    height: 200px;
+    height: 440%;
     width: 200px;
-    color: #1b1b1b;
     list-style: none;
     text-decoration: none;
     display: none;
